--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       "quml-library/*": [
         "dist/quml-library/*"
       ],
+      "@angular/*": [
+        "./node_modules/@angular/*"
+      ],
       "@project-sunbird/sunbird-quml-player": [
         "dist/quml-library"
       ],
